<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FBVideosHere</string>
    <string name="buy_add_free_version">Buy Ad Free Version</string>
    <string name="MoreApps">More Apps </string>
    <string name="Share_This_App">Share This App</string>
    <string name="About">About</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="description">Media Controls</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_options">Options</string>
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="send_to">Send to</string>
    <string name="gottofb">Go To FaceBook</string>
    <string name="explantion">Explanation How To Download Videos</string>
    <string name="fromourapp">From Our App</string>
    <string name="rateapp">Rate App</string>
    <string name="setting">Settings</string>
    <string name="home">Home</string>
    <string name="videolist">Video List</string>
    <string name="pastelink">Paste Link</string>
    <string name="askdownload">Do you Really want to Save Video ?</string>
    <string name="savevideo">Save Video?</string>
    <string name="copyurl">Copy Url</string>
    <string name="watch">Watch</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="downloadoption">Download Option</string>
    <string name="fromfaebook">From Facebook App</string>
    <string name="banner_home_footer">ca-app-pub-0664570763252260/3326522424</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>

    <string-array name="language">
        <item>Choose Language</item>
        <item>العربية</item>
        <item>English</item>

    </string-array>
</resources>
