<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_rate"
        android:title="@string/rateapp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="never"/>
    <item
        android:id="@+id/clear_app_data"
        android:orderInCategory="100"
        android:title="@string/clear_app_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/Share_This_App"
        android:orderInCategory="100"
        android:title="@string/Share_This_App"
        app:showAsAction="never" />
    <item
        android:id="@+id/settingslang"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/About"
        android:orderInCategory="100"
        android:title="@string/About"
        app:showAsAction="never" />
</menu>

