<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/explantion"
                android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:src="@drawable/firstway"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:layout_height="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/fromourapp"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="50dp"
                android:src="@drawable/second"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:layout_height="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/fromfaebook"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycleexp"
                android:layout_weight="1"
                android:layout_height="0dp"/>









</LinearLayout>