<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="start"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/downloadoption"
        android:textColor="@color/white"
        android:background="@color/pink"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"/>



    <RadioGroup
        android:layout_width="wrap_content"
        android:id="@+id/radiogroup"

        android:layout_height="match_parent">
        <RadioButton
            android:layout_width="wrap_content"
            android:text="Simple HD(MP4)"
            android:id="@+id/hdqu"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="640p"
            android:id="@+id/otherone"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="240p"
            android:id="@+id/othertwo"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="360p"
            android:id="@+id/otherthree"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:text="720p"
            android:id="@+id/otherfour"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/downloadvideo"
            android:layout_margin="5dp"
            android:background="@color/blue"
            android:layout_height="wrap_content"/>
        <Button
        android:layout_width="0dp"
            android:layout_weight="1"
        android:text="@string/cancel"
            android:id="@+id/cancelvideo"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:background="@color/blue"
        android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>

</LinearLayout>